gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/bug19569.d
version https://git-lfs.github.com/spec/v1
oid sha256:80611e03b0ffa2680f498862afa68c1da870c78873e402766bd6f4bfff0ad313
size 3158
